[package]
name = "t9s"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
ratatui = "0.29.0"
nucleo = "0.5.0"
async-fs = "2.1.3"
dirs = "6.0.0"
serde_json = "1.0.140"
open = "5.0.0"
config = "0.14"
